--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
-    "vitest": "^1.4.0"
+    "vitest": "^1.4.0",
+    "vitest-webgl-canvas-mock": "^1.1.0"
   }
 }
